methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:2: error: value tp is not a member of Int
  for (i <- 1 tp 4) {
              ^